--- a/main.css
+++ b/main.css
@@ -1,24 +1,28 @@
 body {
-    display: grid;
-    justify-items: center;
+    margin: 0;
+}
+
+#container {
     align-items: center;
+    justify-content: center;
     background-color: #F5F5F5;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    
 }
 
-#main-box {
-    width: 50%;
-    height: 50%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    background-color: white;
-    border-radius: 46px 46px 46px 46px;
-    border: 0px solid #000000;
+#login-form {
+    background-color: #FFFFFF;
+    height: 50px;
+    width: 50px;
+    padding: 16px;
 }
 
-#login {
-    align-self: flex-start;
-    display: grid;
-    justify-items: center;
-    align-items: center;
+input {
+    width: 100%;
+}
+
+button {
+  padding: 4px 10px;  
 }
